--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twitter-clone",
+  "name": "t3-stack-category-selection",
   "version": "0.1.0",
   "private": true,
   "type": "module",
